--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,1 +1,21 @@
-
+<!doctype html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang=""> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8" lang=""> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9" lang=""> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="en" data-bs-theme="dark"> <!--<![endif]-->
+<head>
+  {% include head.html %}
+</head>
+<body>
+  {% include nav.html %}
+  <section class="py-3 full-height">
+    <div class="container container-fluid">
+      <div class="content">
+        {{ content }}
+      </div>
+    </div>
+  </section>
+  {% include footer.html %}
+  {% include scripts.html %}
+</body>
+</html>
