--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,1 +1,6 @@
-
+<!-- Required meta tags -->
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<title>{% if page.title %}{{ page.title }}{% else %}{{ site.name }}{% endif %}</title>
+<!-- tester -->
+{% include styles.html %}
