--- a/_includes/home.html
+++ b/_includes/home.html
@@ -1,1 +1,25 @@
-
+<div class="row">
+    <div class="col"></div>
+    <div class="profile-pic-wrapper col-8 col-sm-6 col-md-5 col-lg-3 col-xl-3">
+        <img id="profile-pic" src="/assets/images/profile.jpeg">
+    </div>
+    <div class="col"></div>
+</div>
+<div class="row">
+    <div class="col"></div>
+    <div class="content-text col-10 col-sm-10 col-md-8 col-xl-7">
+        <hr>
+        <p>
+            I am a researcher and translator originally from Edinburgh, now based in Berlin.
+        </p>
+        <p>
+            I translate from German and Dutch to English with projects spanning both the commercial and academic sectors.
+        <p>
+            Writing, translation, and research are all interlinked. Often my clients already speak excellent English and are looking for someone who can rewrite their ideas in a way that strikes the right chord with the readers. Sometimes the right English phrase is not in the dictionary, and I can track down the perfect equivalent in no time.
+        </p>
+        <p>
+            If you want to win over new customers, expand the reach of your advertising, or polish your academic English – that’s where I come in.
+        </p>
+        <p>
+            Just get in touch and tell me about your project.
+        </p>
