--- a/_includes/home.html
+++ b/_includes/home.html
@@ -23,3 +23,6 @@
         <p>
             Just get in touch and tell me about your project.
         </p>
+</div>
+    <div class="col"></div>
+</div>
