--- a/_includes/editing.html
+++ b/_includes/editing.html
@@ -1,1 +1,16 @@
-
+<div class="row">
+    <div class="col"></div>
+    <div class="content-text col-10 col-sm-10 col-md-8 col-xl-7">
+        <hr>
+        <p>
+            I offer English-language proofreading services for business and academic purposes. My experience in the world of commercial translation and in academia enables me to adapt style and tone according to the expectations of your sector.
+        </p>
+        <p>
+            If desired, I can also make editorial suggestions beyond spelling and grammar which will help to make your text more appealing to your target audience.
+        </p>
+        <p>
+            Just get in touch and we can discuss your needs further.
+        </p>
+    </div>
+    <div class="col"></div>
+</div>
