--- a/_includes/translation.html
+++ b/_includes/translation.html
@@ -1,1 +1,22 @@
-
+<div class="row">
+    <div class="col"></div>
+    <div class="content-text col-10 col-sm-10 col-md-8 col-xl-7">
+        <hr>
+        <p>
+            I translate from German and Dutch to English spanning both the commercial and the cultural sectors. I generally focus on marketing, interviews, websites, and reports.
+        </p>
+        <p>
+            Here’s a selection from my portfolio:        
+        </p>
+        <p>
+            ‘Voices under Construction: Translation Journal for Bernardine Evaristo’s <i>Mr Loverman</i>’ by Tanja Handels <a href="https://www.toledo-programm.de/journale/6229/voices-under-construction">
+        </p>
+        <p>
+            ‘Improved Patient Welfare in Radiology – The Vision for a Start-Up’ – Interview with Dr Katharina Erb-Eigner <a href="https://www.stiftung-charite.de/en/our-funding-recipients-close-up/pd-dr-katharina-erb-eigner">
+        </p>
+        <p>
+            ‘The Opening of the Max Rubner Center on Hessische Straße – The History of Medicine meets Modern Research’ – Interview with Prof. Ulrich Kintscher <a href="https://www.stiftung-charite.de/en/our-funding-recipients-close-up/ulrich-kintscher">
+        </p>
+    </div>
+    <div class="col"></div>
+</div>
