--- a/_includes/translation.html
+++ b/_includes/translation.html
@@ -9,13 +9,13 @@
             Here’s a selection from my portfolio:        
         </p>
         <p>
-            ‘Voices under Construction: Translation Journal for Bernardine Evaristo’s <i>Mr Loverman</i>’ by Tanja Handels <a href="https://www.toledo-programm.de/journale/6229/voices-under-construction">
+            ‘Voices under Construction: Translation Journal for Bernardine Evaristo’s <i>Mr Loverman</i>’ by Tanja Handels <a href="https://www.toledo-programm.de/journale/6229/voices-under-construction">link</a>
         </p>
         <p>
-            ‘Improved Patient Welfare in Radiology – The Vision for a Start-Up’ – Interview with Dr Katharina Erb-Eigner <a href="https://www.stiftung-charite.de/en/our-funding-recipients-close-up/pd-dr-katharina-erb-eigner">
+            ‘Improved Patient Welfare in Radiology – The Vision for a Start-Up’ – Interview with Dr Katharina Erb-Eigner <a href="https://www.stiftung-charite.de/en/our-funding-recipients-close-up/pd-dr-katharina-erb-eigner">link</a>
         </p>
         <p>
-            ‘The Opening of the Max Rubner Center on Hessische Straße – The History of Medicine meets Modern Research’ – Interview with Prof. Ulrich Kintscher <a href="https://www.stiftung-charite.de/en/our-funding-recipients-close-up/ulrich-kintscher">
+            ‘The Opening of the Max Rubner Center on Hessische Straße – The History of Medicine meets Modern Research’ – Interview with Prof. Ulrich Kintscher <a href="https://www.stiftung-charite.de/en/our-funding-recipients-close-up/ulrich-kintscher">link</a>
         </p>
     </div>
     <div class="col"></div>
