--- a/_includes/research.html
+++ b/_includes/research.html
@@ -1,1 +1,22 @@
-
+<div class="row">
+    <div class="col"></div>
+    <div class="content-text col-10 col-sm-10 col-md-8 col-xl-7">
+        <hr>
+        <p>
+          I completed my PhD at the University of Cambridge in 2023 with a dissertation on <i>Activist Intellectuals and Counterterrorism Debates in the Federal Republic of Germany (1968-77)</i> <a href="https://doi.org/10.17863/CAM.91188">link</a>. In other words, I’m interested in the history of social movements and organisations like the Baader-Meinhof group. Take a look at my articles if you are interested in learning more:
+        </p>
+        <p>
+            Take a look at my articles if you're interested in learning more:       
+        </p>
+        <p>
+            ‘Prisoners of the World Unite: The Internationalism of the 2 June Movement from Berlin Moabit Prison’  <a href="https://academic.oup.com/gh/article/40/3/425/6596209">link</a>
+        </p>
+        <p>
+            ‘Protecting the Public Sphere(s): The Campaign for Peter-Paul Zahl’ <a href="https://onlinelibrary.wiley.com/doi/10.1111/glal.12322">link</a>
+        </p>
+        <p>
+            If you need someone who can track down the author of an unnamed diary or an obscure newspaper article from the 1960s, look no further. I love detective work and would be happy to assist in getting what you need from the archives and libraries in Berlin.
+        </p>
+    </div>
+    <div class="col"></div>
+</div>
