--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,14 @@
-<section class="footer-link"> 
+<section class="footer-link">
+    <p>
+        Catriona Corke
+        Jahnstr. 87/89
+        12347 Berlin
+    </p>
+    <p>
+        clcorke[at]proton.me
+    </p>
+    <p>
+        VAT-ID DE355156645
+    </p>
     <span>&copy; catriona corke, 2023</span>
 </section>
